kubernetes/cluster0/apps/networking/traefik/dashboard/dashboard-httproute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: networking
spec:
  selector:
    app.kubernetes.io/instance: traefik-networking
    app.kubernetes.io/name: traefik
  type: ClusterIP
  ports:
  - name: dashboard
    protocol: TCP
    port: 80
    targetPort: 8080
---
# switch to httproute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: networking
spec:
  hostnames: 
  - "traefik.${SECRET_PUBLIC_DOMAIN}"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: networking
      sectionName: websecure
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /api
    filters:
      - type: ExtensionRef
        extensionRef:
          group: traefik.io
          kind: Middleware
          name: forwardauth-authelia
    backendRefs:
      - group: ""
        kind: Service
        name: traefik-dashboard
        namespace: networking
        port: 80
  - matches:
      - path:
          type: PathPrefix
          value: /
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /dashboard/
      - type: ExtensionRef
        extensionRef:
          group: traefik.io
          kind: Middleware
          name: forwardauth-authelia
    backendRefs:
      - group: ""
        kind: Service
        name: traefik-dashboard
        namespace: networking
        port: 80
