kubernetes/cluster0/apps/networking/traefik/dashboard/dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-addprefix
  namespace: networking
spec:
  addPrefix:
    prefix: /dashboard

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dash-ingress
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: "(Host(`traefik.${SECRET_PUBLIC_DOMAIN}`) && !PathPrefix(`/api`))"
      kind: Rule
      middlewares:
        # - name: chain-authelia-auth
        #   namespace: auth
        - name: traefik-dashboard-addprefix
          namespace: networking
      services:
        - name: api@internal
          kind: TraefikService
    # separate route for api without dash prefix removed
    - match: "(Host(`traefik.${SECRET_PUBLIC_DOMAIN}`) && PathPrefix(`/api`))"
      kind: Rule
      middlewares:
        # - name: chain-authelia-auth
        #   namespace: auth
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
